--- a/choose/index.html
+++ b/choose/index.html
@@ -17,19 +17,19 @@
     <h3 id="Datum"></h3>
     <div class="box">
       <tr>
-        <th><button id="button" value="100">15.00</button></th>
-        <th><button id="button" value="101">15.00</button></th>
-        <th><button id="button" value="102">15.00</button></th>
+        <th><button class="button" id="100"></button></th>
+        <th><button class="button" id="101"></button></th>
+        <th><button class="button" id="102"></button></th>
       </tr>
       <tr>
-          <th><button id="button" value="103">15.00</button></th>
-          <th><button id="button" value="104">15.00</button></th>
-          <th><button id="button" value="105">15.00</button></th>
+          <th><button class="button" id="103"></button></th>
+          <th><button class="button" id="104"></button></th>
+          <th><button class="button" id="105"></button></th>
       </tr>
       <tr>
-          <th><button id="button" value="106">15.00</button></th>
-          <th><button id="button" value="107">15.00</button></th>
-          <th><button id="button" value="108">15.00</button></th>
+          <th><button class="button" id="106"></button></th>
+          <th><button class="button" id="107"></button></th>
+          <th><button class="button" id="108"></button></th>
       </tr>
       <button id="maak_de_afspraak_compleet" onclick="submit()">Maak je afspraak compleet</button>
     </div>
