--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <option id="e118"></option>
                     <option id="e119"></option>
                     <option id="e120"></option>
+                    <option id="gaterug">Ga terug</option>
                 </select>
             </div>
             <div id="damesselect">
@@ -67,6 +68,7 @@
                     <option id="e218"></option>
                     <option id="e219"></option>
                     <option id="e220"></option>
+                    <option id="gaterug">Ga terug</option>
                 </select>
             </div>
             <div id="kinderenselect">
@@ -92,6 +94,7 @@
                     <option id="e318"></option>
                     <option id="e319"></option>
                     <option id="e320"></option>
+                    <option id="gaterug">Ga terug</option>
                 </select>
             </div>
         </div>
