--- a/bevestigen/index.html
+++ b/bevestigen/index.html
@@ -23,7 +23,7 @@
                 <button onclick="submit()" id="submit">Reserveer</button>
             </div>
         </div>
-        <script src="main.js"></script>      
+        <!-- <script src="main.js"></script>       -->
         <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
 
         <!-- TODO: Add SDKs for Firebase products that you want to use
