--- a/choose/index.html
+++ b/choose/index.html
@@ -17,21 +17,21 @@
     <h3 id="Datum"></h3>
     <div class="box">
       <tr>
-        <th><button class="button" id="100"></button></th>
-        <th><button class="button" id="101"></button></th>
-        <th><button class="button" id="102"></button></th>
+        <th><button class="button" id="100" onclick="choosebttn(100)"></button></th>
+        <th><button class="button" id="101" onclick="choosebttn(101)"></button></th>
+        <th><button class="button" id="102" onclick="choosebttn(102)"></button></th>
       </tr>
       <tr>
-          <th><button class="button" id="103"></button></th>
-          <th><button class="button" id="104"></button></th>
-          <th><button class="button" id="105"></button></th>
+          <th><button class="button" id="103" onclick="choosebttn(103)"></button></th>
+          <th><button class="button" id="104" onclick="choosebttn(104)"></button></th>
+          <th><button class="button" id="105" onclick="choosebttn(105)"></button></th>
       </tr>
       <tr>
-          <th><button class="button" id="106"></button></th>
-          <th><button class="button" id="107"></button></th>
-          <th><button class="button" id="108"></button></th>
+          <th><button class="button" id="106" onclick="choosebttn(106)"></button></th>
+          <th><button class="button" id="107" onclick="choosebttn(107)"></button></th>
+          <th><button class="button" id="108" onclick="choosebttn(108)"></button></th>
       </tr>
-      <button id="maak_de_afspraak_compleet" onclick="submit()">Maak je afspraak compleet</button>
+      <button id="maak_de_afspraak_compleet" onclick="ContinueButton()">Maak je afspraak compleet</button>
     </div>
     <script src="mainch.js"></script>
 
