--- a/public/bevestigd/index.html
+++ b/public/bevestigd/index.html
@@ -7,15 +7,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,800,800i,900,900i&display=swap"
         rel="stylesheet">
     <meta charset="utf-8">
-    <title>Oh en je krijgt nog een mail</title>
+    <title>Maak een afspraak</title>
 </head>
 
 <body>
     <h1>Bevestigen</h1>
     <p>Je afspraak is gemaakt en er wordt een mail naar jou toe gestuurd waar je de gegevens nog even rustig na kunt kijken. Je kan in deze mail ook je afspraak afzeggen, mocht je onverhoopt niet kunnen.
-    <br>
-    <button id=button onclick=tohome()>Oké</button>
     </p>
+    <button id=button onclick=tohome()>Oké</button>
     <script src="main.js"></script>
 </body>
 
